# chibi

./: .dockerignore  .example.env  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yml  agent.Dockerfile  armv7.Dockerfile  changelog.md  docker-compose.yml  main.py  optimized.Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_file.txt
.github/actions/setup/: action.yml
.github/workflows/: build.yml  main.yml  nightly.yml  publish.yml
chibi/: __main__.py  cli.py  config.py  config_generator.py  constants.py  exceptions.py  models.py  service.py  types.py  utils.py
chibi/config/: __init__.py  app.py  gpt.py  telegram.py
chibi/memory/: __init__.py  abstract.py  batch.py  chroma.py
chibi/runners/: telegram.py  terminal.py
chibi/schemas/: anthropic.py  app.py  cloudflare.py  mistralai.py  suno.py
chibi/services/: anthropic.py  bot.py  gpt.py  interface.py  lock_manager.py  metrics.py  mistralai.py  openai.py  provider.py  scheduler.py  task_manager.py  terminal_interface.py  user.py
chibi/services/jobs/: __init__.py  archive.py
chibi/services/mcp/: manager.py
chibi/services/providers/: __init__.py  alibaba.py  anthropic.py  cloudflare.py  customopenai.py  deepseek.py  eleven_labs.py  gemini.py  gemini_native.py  grok.py  minimax.py  mistralai.py  mistralai_native.py  moonshotai.py  open_router.py  openai.py  provider.py  suno.py  utils.py  zhipuai.py
chibi/services/providers/constants/: suno.py
chibi/services/providers/tools/: __init__.py  cmd.py  common.py  constants.py  current_date.py  exceptions.py  file_editor.py  mcp_management.py  mcp_simple.py  media.py  memory.py  ocr_pdf.py  schemas.py  send.py  tool.py  topic.py  utils.py  vision.py  web.py  web_search.py
chibi/storage/: abc.py  abstract.py  chroma_decorator.py  chroma_wrapper.py  database.py  dynamodb.py  local.py  redis.py
chibi/storage/files/: __init__.py  file_storage.py  local_storage.py  telegram_storage.py
chibi/utils/: app.py  bot.py  telegram.py
docs/: DOCKER_HUB_README.md  README.es.md  README.id.md  README.ja.md  README.pt-BR.md  README.ru.md  README.tr.md  README.uk.md  README.zh-CN.md  README.zh-TW.md  README_old.md
examples/: .example.env  docker-compose.minimal.redis.yml  docker-compose.minimal.yml  docker-compose.personal-use.yml  docker-compose.public-use.yml
scripts/: .gitignore  QUICKSTART.md  README.md  dobby-aliases.sh  dobby-control.sh  dobby.env.example  install.sh
skills/: executor_workflow_skill.md  imagen_prompting_skill.md  jina_reader_skill.md  macos_desktop_developer_skill.md  nano_banana_prompting_skill.md  pm_workflow_skill.md  product_manager_skill.md  reviewer_workflow_skill.md  skill_maker_skill.md  suno_skill.md  wan_prompting_skill.md
tests/: conftest.py  test_anthropic_vision.py  test_chroma_decorator.py  test_chroma_wrapper.py  test_database.py  test_describe_image.py  test_dynamodb_storage.py  test_eleven_labs.py  test_file_editor.py  test_local_storage.py  test_memory.py  test_metrics.py  test_minimax.py  test_models.py  test_openai_vision.py  test_redis_storage.py  test_task_manager.py
tests/services/: test_retention_job.py
tests/services/providers/: test_anthropic.py  test_anthropic_vision.py  test_gemini_native.py  test_gemini_vision.py  test_minimax.py  test_mistralai_native.py  test_mistralai_vision.py  test_openai.py
tests/services/tools/: test_file_editor.py  test_find_and_replace_bug.py  test_memory_tool.py  test_ocr_pdf_tool.py  test_vision_tools.py
