[tool.poetry]
name = "chibi-bot"
version = "1.6.6"
description = "Your Digital Companion. Self-hosted Telegram bot orchestrating multiple AI providers (OpenAI, Anthropic, Google, xAI, DeepSeek, Mistral, Alibaba, MiniMax) with autonomous agent capabilities, MCP integrations, and async task execution. Not a tool. A partner."
authors = ["Sergei Nagaev <nagaev.sv@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "telegram",
    "bot",
    "ai",
    "agent",
    "llm",
    "mcp",
    "openai",
    "anthropic",
    "deepseek",
    "gemini",
    "ollama",
    "asyncio",
    "minimax",
    "self-hosted",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
]
packages = [{include = "chibi"}]
include = ["data/.keep", "skills"]
exclude = ["tests", "docs", "scripts", "examples", ".project", "data/*.pkl", "data/*.md", "data/old", "data/scripts"]

[tool.poetry.urls]
Homepage = "https://chibi.bot"
Repository = "https://github.com/s-nagaev/chibi"
Issues = "https://github.com/s-nagaev/chibi/issues"
Changelog = "https://github.com/s-nagaev/chibi/releases"

[tool.poetry.dependencies]
python = "^3.11"
aiocache = "0.12.3"
anthropic = "0.79.0"
boto3 = "1.42.44"
cachetools = "^7.0.1"
click = ">=8.0.0"
dashscope = "1.25.11"
ddgs = "9.10.0"
elevenlabs = "2.34.0"
fake-useragent = "2.2.0"
google-genai = "1.62.0"
httpx = "0.28.1"
influxdb-client = "^1.49.0"
loguru = "0.7.3"
mcp = "1.26.0"
mistralai = "1.12.0"
openai = "2.17.0"
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
python-telegram-bot = {extras = ["socks", "job-queue"], version = "^22.5"}
redis = {extras = ["hiredis"], version = "7.1.0"}
telegramify-markdown = "0.5.4"
tenacity = "9.1.4"
trafilatura = "2.0.0"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.3"
fakeredis = "^2.28.1"
freezegun = "^1.5.1"
ipython = "^9.7.0"
moto = "^5.1.4"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-asyncio = "^1.3.0"
respx = "^0.22.0"
ruff = "^0.11.6"
types-cachetools = "^6.2.0.20251022"
vulture = "^2.14"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
files = "**/*.py"
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
strict = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
allow_untyped_calls = true
plugins = [ "pydantic.mypy" ]


[tool.vulture]
ignore_names = ["expected_type",]
min_confidence = 80
sort_by_size = true
paths = ["."]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
chibi = "chibi.cli:main"
